2006-08-24  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Replaced nsl & socket X_AC_CHECK_COND_LIB with
	  AC_SEARCH_LIBS.  Moved X_AC_CHECK_SSL to after this check so LIBS
	  would include -lsocket & -lnsl if needed (eg, on Solaris).  Merged
	  check for inet_ntop with the rest of AC_REPLACE_FUNCS.
	* src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am: Removed use of LIBNSL & LIBSOCKET.

2006-08-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.3.in: Tweaked synopsis formatting.

2006-08-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.1.in, src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/libmunge/munge.3.in, src/libmunge/munge_ctx.3.in,
	  src/libmunge/munge_enum.3.in, src/libcommon/munge.7.in,
	  src/munged/munged.8.in: Added copyright boilerplate.

2006-08-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge.7.in: Updated description.

	* QUICKSTART: Updated.

2006-08-20  Chris Dunlap  <cdunlap@llnl.gov>

	* QUICKSTART: Updated.

	* README, munge.spec: Updated description.

2006-08-16  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

2006-08-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Tweaked spacing.

	* src/etc/munge.init.in(service_restart): Changed so start would not
	  be attempted if preceding stop had failed.

	* src/etc/munge.init.in(service_start,service_stop): Replaced Debian's
	  "--oknodo" with test for "$0 status" since --oknodo would also mask
	  errors such as "operation not permitted".

	* Makefile.am: Replaced distclean-local target with DISTCLEANFILES.

	* src/etc/Makefile.am: Added munge.init to noinst_DATA, thereby adding
	  its dependency to the "all" target.

	* src/libcommon/log.c(_log_prefix): Changed priority prefixes to
	  mixed-case strings.

	* README, munge.spec: Updated description.

2006-07-27  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed the test for starting a service on